fix navbar items margin and lhs and rhs items, add navbar gh icon and add hover effect and account for darkmode, subHeader items aligned left and start on social buttons stylying, add Docs and Blog to navbar

--- a/website/src/components/Features.css
+++ b/website/src/components/Features.css
@@ -5,3 +5,7 @@
   stroke: white;
   stroke-width: 2px;
 }
+
+.features-gap {
+  margin-bottom: 100px;
+}
